# nanodeepseek

./: README.md  hello.py  model.py  pyproject.toml  train_model.py
data/openwebtext_llama/: prepare.py
